--- a/lib/sinatra/rest/rest.yaml
+++ b/lib/sinatra/rest/rest.yaml
@@ -1,25 +1,25 @@
 --- 
 :index:
   :verb: GET
-  :route: /PLURAL
+  :url: /PLURAL
   :render: |-
     RENDERER :'PLURAL/index', options  
 
 :new:
   :verb: GET
-  :route: /PLURAL/new
+  :url: /PLURAL/new
   :render: |-
     RENDERER :'PLURAL/new', options
 
 :create:
   :verb: POST
-  :route: /PLURAL
+  :url: /PLURAL
   :render: |-
     redirect url_for_PLURAL_show(@SINGULAR), 'SINGULAR created'
 
 :show:
   :verb: GET
-  :route: /PLURAL/:id
+  :url: /PLURAL/:id
   :render: |-
     if @SINGULAR.nil?
       throw :halt, [404, 'SINGULAR not found']
@@ -29,13 +29,13 @@
 
 :edit:
   :verb: GET
-  :route: /PLURAL/:id/edit
+  :url: /PLURAL/:id/edit
   :render: |-
     RENDERER :'PLURAL/edit', options
 
 :update:
   :verb: PUT
-  :route: /PLURAL/:id
+  :url: /PLURAL/:id
   :render: |-
     if @SINGULAR.nil?
       throw :halt, [404, 'SINGULAR not found']
@@ -45,7 +45,7 @@
 
 :destroy:
   :verb: DELETE
-  :route: /PLURAL/:id
+  :url: /PLURAL/:id
   :render: |-
     redirect url_for_PLURAL_index, 'SINGULAR destroyed'
 
